// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redo_undo: ambientLight prepare first step: set currentSceneTreeNode test redo operate test redo one step undo step which from second to zero, redo step which from zero to first 1`] = `
<article
  className="wonder-header-component"
>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <button
        onClick={[Function]}
      >
        undo
      </button>
    </div>
    <div
      className="component-item"
    >
      <button
        onClick={[Function]}
      >
        redo
      </button>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <button
        onClick={[Function]}
      >
        add box
      </button>
    </div>
    <div
      className="component-item"
    >
      <button
        disabled={true}
        onClick={[Function]}
      >
        dispose
      </button>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <article
        className="wonder-file-input"
      >
        <button
          onClick={[Function]}
        >
          show Input
        </button>
      </article>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <article
        className="wonder-switch"
      >
        <button
          onClick={[Function]}
        >
          run
        </button>
      </article>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <article
        className="wonder-color-pick"
      >
        <div
          className=""
        >
          <span
            className=""
          >
            ambient color : 
          </span>
          <span
            className=""
          >
            #7df1e8
          </span>
          <button
            className=""
            onClick={[Function]}
          >
            pick color
          </button>
        </div>
      </article>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <button
        onClick={[Function]}
      >
        add empty gameObject
      </button>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <input
        className="file-upload"
        multiple={false}
        onChange={[Function]}
        type="file"
      />
    </div>
  </div>
</article>
`;

exports[`redo_undo: ambientLight prepare first step: set currentSceneTreeNode test redo operate test redo two step undo step which from second to zero,redo step which from zero to second 1`] = `
<article
  className="wonder-header-component"
>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <button
        onClick={[Function]}
      >
        undo
      </button>
    </div>
    <div
      className="component-item"
    >
      <button
        onClick={[Function]}
      >
        redo
      </button>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <button
        onClick={[Function]}
      >
        add box
      </button>
    </div>
    <div
      className="component-item"
    >
      <button
        disabled={true}
        onClick={[Function]}
      >
        dispose
      </button>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <article
        className="wonder-file-input"
      >
        <button
          onClick={[Function]}
        >
          show Input
        </button>
      </article>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <article
        className="wonder-switch"
      >
        <button
          onClick={[Function]}
        >
          run
        </button>
      </article>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <article
        className="wonder-color-pick"
      >
        <div
          className=""
        >
          <span
            className=""
          >
            ambient color : 
          </span>
          <span
            className=""
          >
            #1918e8
          </span>
          <button
            className=""
            onClick={[Function]}
          >
            pick color
          </button>
        </div>
      </article>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <button
        onClick={[Function]}
      >
        add empty gameObject
      </button>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <input
        className="file-upload"
        multiple={false}
        onChange={[Function]}
        type="file"
      />
    </div>
  </div>
</article>
`;

exports[`redo_undo: ambientLight prepare first step: set currentSceneTreeNode test undo operate test not undo 1`] = `
<article
  className="wonder-header-component"
>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <button
        onClick={[Function]}
      >
        undo
      </button>
    </div>
    <div
      className="component-item"
    >
      <button
        onClick={[Function]}
      >
        redo
      </button>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <button
        onClick={[Function]}
      >
        add box
      </button>
    </div>
    <div
      className="component-item"
    >
      <button
        disabled={true}
        onClick={[Function]}
      >
        dispose
      </button>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <article
        className="wonder-file-input"
      >
        <button
          onClick={[Function]}
        >
          show Input
        </button>
      </article>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <article
        className="wonder-switch"
      >
        <button
          onClick={[Function]}
        >
          run
        </button>
      </article>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <article
        className="wonder-color-pick"
      >
        <div
          className=""
        >
          <span
            className=""
          >
            ambient color : 
          </span>
          <span
            className=""
          >
            #1918e8
          </span>
          <button
            className=""
            onClick={[Function]}
          >
            pick color
          </button>
        </div>
      </article>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <button
        onClick={[Function]}
      >
        add empty gameObject
      </button>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <input
        className="file-upload"
        multiple={false}
        onChange={[Function]}
        type="file"
      />
    </div>
  </div>
</article>
`;

exports[`redo_undo: ambientLight prepare first step: set currentSceneTreeNode test undo operate test undo one step step which from second to first 1`] = `
<article
  className="wonder-header-component"
>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <button
        onClick={[Function]}
      >
        undo
      </button>
    </div>
    <div
      className="component-item"
    >
      <button
        onClick={[Function]}
      >
        redo
      </button>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <button
        onClick={[Function]}
      >
        add box
      </button>
    </div>
    <div
      className="component-item"
    >
      <button
        disabled={true}
        onClick={[Function]}
      >
        dispose
      </button>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <article
        className="wonder-file-input"
      >
        <button
          onClick={[Function]}
        >
          show Input
        </button>
      </article>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <article
        className="wonder-switch"
      >
        <button
          onClick={[Function]}
        >
          run
        </button>
      </article>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <article
        className="wonder-color-pick"
      >
        <div
          className=""
        >
          <span
            className=""
          >
            ambient color : 
          </span>
          <span
            className=""
          >
            #7df1e8
          </span>
          <button
            className=""
            onClick={[Function]}
          >
            pick color
          </button>
        </div>
      </article>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <button
        onClick={[Function]}
      >
        add empty gameObject
      </button>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <input
        className="file-upload"
        multiple={false}
        onChange={[Function]}
        type="file"
      />
    </div>
  </div>
</article>
`;

exports[`redo_undo: ambientLight prepare first step: set currentSceneTreeNode test undo operate test undo two step step which from second to zero 1`] = `
<article
  className="wonder-header-component"
>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <button
        onClick={[Function]}
      >
        undo
      </button>
    </div>
    <div
      className="component-item"
    >
      <button
        onClick={[Function]}
      >
        redo
      </button>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <button
        onClick={[Function]}
      >
        add box
      </button>
    </div>
    <div
      className="component-item"
    >
      <button
        disabled={true}
        onClick={[Function]}
      >
        dispose
      </button>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <article
        className="wonder-file-input"
      >
        <button
          onClick={[Function]}
        >
          show Input
        </button>
      </article>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <article
        className="wonder-switch"
      >
        <button
          onClick={[Function]}
        >
          run
        </button>
      </article>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <article
        className="wonder-color-pick"
      >
        <div
          className=""
        >
          <span
            className=""
          >
            ambient color : 
          </span>
          <span
            className=""
          >
            #000000
          </span>
          <button
            className=""
            onClick={[Function]}
          >
            pick color
          </button>
        </div>
      </article>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <button
        onClick={[Function]}
      >
        add empty gameObject
      </button>
    </div>
  </div>
  <div
    className="header-item"
  >
    <div
      className="component-item"
    >
      <input
        className="file-upload"
        multiple={false}
        onChange={[Function]}
        type="file"
      />
    </div>
  </div>
</article>
`;
